adding bit more

--- a/files/settings.json
+++ b/files/settings.json
@@ -1,28 +1,12 @@
 {
-    "editor.tabSize": 2,
-    "editor.renderWhitespace": "all",
-    "explorer.openEditors.visible": 0,
-    "gitlens.advanced.messages": {
-        "suppressCommitHasNoPreviousCommitWarning": false,
-        "suppressCommitNotFoundWarning": false,
-        "suppressFileNotUnderSourceControlWarning": false,
-        "suppressGitVersionWarning": false,
-        "suppressLineUncommittedWarning": false,
-        "suppressNoRepositoryWarning": false,
-        "suppressResultsExplorerNotice": false,
-        "suppressShowKeyBindingsNotice": true
-    },
-    "editor.minimap.enabled": false,
-    "workbench.startupEditor": "newUntitledFile",
-    "explorer.confirmDragAndDrop": false,
-    "explorer.confirmDelete": false,
-    "window.zoomLevel": 0,
-    "extensions.ignoreRecommendations": true,
-    "gitlens.historyExplorer.enabled": true,
-    "files.associations": {
-        "*.j2": "yaml",
-        "syslog": "log"
-    },
-    "files.maxMemoryForLargeFilesMB": 16096
-
+  "workbench.startupEditor": "newUntitledFile",
+  "editor.tabSize": 2,
+  "editor.detectIndentation": false,
+  "editor.minimap.enabled": false,
+  "window.zoomLevel": 0,
+  "explorer.confirmDragAndDrop": false,
+  "sync.autoUpload": true,
+  "sync.forceDownload": false,
+  "sync.forceUpload": true,
+  "sync.gist": "<Add GIST ID HERE>"
 }
